[package]
name = "kurobako_core"
version = "0.0.11"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "Core crate for `kurobako`"
homepage = "https://github.com/sile/kurobako"
repository = "https://github.com/sile/kurobako"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/kurobako"}
codecov = {repository = "sile/kurobako"}

[dependencies]
log = "0.4"
ordered-float = "1" #{ version = "1", features = ["serde"] }
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tempfile = "3"
trackable = "0.2"
