[package]
name = "kurobako_core"
version = "0.1.10"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "Core crate for `kurobako`"
homepage = "https://github.com/sile/kurobako"
repository = "https://github.com/sile/kurobako"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/kurobako"}
codecov = {repository = "sile/kurobako"}

[dependencies]
itertools = "0.8"
lazy_static = "1"
ordered-float = "1"
rand = "0.7"
rlua = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.8"
structopt = "0.3"
tempfile = "3"
trackable = "0.2"
