[package]
name = "kurobako_problems"
version = "0.0.4"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A collection of black-box optimization problems"
homepage = "https://github.com/sile/kurobako"
repository = "https://github.com/sile/kurobako"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/kurobako"}
codecov = {repository = "sile/kurobako"}

[dependencies]
kurobako_core = { path = "../kurobako_core/", version = "0.0" }
nasbench = "0.1"
rand = "0.6"
regex = "1"
rustats = "0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.2"
tempfile = "3"
trackable = "0.2"
yamakan = "0.0"
