[package]
name = "kurobako_problems"
version = "0.1.8"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A collection of black-box optimization problems"
homepage = "https://github.com/sile/kurobako"
repository = "https://github.com/sile/kurobako"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/kurobako"}
codecov = {repository = "sile/kurobako"}

[dependencies]
hdf5file = "0.1"
kurobako_core = { path = "../kurobako_core/", version = "0.1" }
nasbench = "0.1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
trackable = "0.2"
