[package]
name = "kurobako_sigopt"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
kurobako_core = { path = "../kurobako_core/" }
serde = "1"
serde_derive = "1"
structopt = "0.2"
tempfile = "3"
yamakan = { git = "git://github.com/sile/yamakan.git" }
