[package]
name = "kurobako_solvers"
version = "0.2.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A collection of black-box optimization solvers"
homepage = "https://github.com/optuna/kurobako"
repository = "https://github.com/optuna/kurobako"
readme = "README.md"
license = "MIT"

[badges]
coveralls = {repository = "optuna/kurobako"}

[dependencies]
kurobako_core = { path = "../kurobako_core/", version = "0.1" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
trackable = "0.2"
yamakan = "0.2"
